CSS fix for small buttons on small screens

--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,7 @@ img {
   width: 15vw;
   font-size: 18px;
   padding: 4px;
+  min-width: 124px;
 }
 
 .game-button:hover {
